// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ConfirmationOverlay snapshots renders a bash confirmation with command-focused arguments 1`] = `
"
  ────────────────────────────────────────────────────────

  Confirm tool request
  Tool: bash
  Risk: exec

  Reason
  bash requires approval

  Arguments
  command: echo hi

  A approve · R reject · Enter approve · Esc reject
"
`;

exports[`ConfirmationOverlay snapshots renders a generic tool confirmation with a wrapped reason 1`] = `
"
  ────────────────────────────────────────────────────────

  Confirm tool request
  Tool: write_file
  Risk: mutate

  Reason
  This write touches a file outside the current task focus and needs a human decision before the
  run continues.

  Arguments
  path: notes.md, content: hello

  A approve · R reject · Enter approve · Esc reject
"
`;
